--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
-include ':demo_app', ':plugin', ':gradle_compat', ':demo_app_lib', ':demo_java_lib'
-rootProject.name='ZZGradlePlugins'
+include ':demo_app_lib', ':demo_java_lib'
+include ':gradle_compat', ':plugin_core' , ':plugin'
