--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -17,43 +17,41 @@ dependencies {
 }
 
 ext {
-    extVersion = "1.0.0"
+    extVersion = "1.0.1"
     groupId = "cn.shper.plugin"
     artifactId = "z-maven"
 }
 
-apply from: 'uploadArchives.gradle'
-//apply plugin: 'z-maven'
-//zmaven {
-//    groupId = project.groupId
-//    artifactId = project.artifactId
-//    version = project.extVersion
-//
-//    repository {
-//        url = "./../repo"
-//        auth = false
-////        userName = "XXX"
-////        password = "XXX"
-////
-////        sourcesJar = false
-////        javadocJar = false
-//    }
-//
-////    snapshotRepository {
-////        url = './../repo/'
-////        auth = false
-////
-////        sourcesJar = true
-////        javadocJar = true
-////    }
-//
-//    bintray {
-//        repo = "maven"
-//        userOrg = "shper"
-//        name = "Z-Maven"
-//        desc = 'Shper Z Maven for Gradle'
-//        websiteUrl = "https://www.shper.cn"
-//        vcsUrl = "https://github.com/shper/ZMavenPlugin"
-//    }
-//
-//}
+//apply from: 'uploadArchives.gradle'
+apply plugin: 'z-maven'
+zmaven {
+    groupId = project.groupId
+    artifactId = project.artifactId
+    version = project.extVersion
+
+    repository {
+        url = "./../repo"
+        auth = false
+
+        sourcesJar = false
+        javadocJar = false
+    }
+
+    snapshotRepository {
+        url = './../repoß'
+        auth = false
+
+        sourcesJar = true
+        javadocJar = true
+    }
+
+    bintray {
+        repo = "maven"
+        userOrg = "shper"
+        name = "Z-Maven"
+        desc = 'Shper Z Maven for Gradle'
+        websiteUrl = "https://www.shper.cn"
+        vcsUrl = "https://github.com/shper/ZMavenPlugin"
+    }
+
+}
