--- a/demo_java_lib/build.gradle
+++ b/demo_java_lib/build.gradle
@@ -13,8 +13,8 @@ ext {
     artifactId = "java_lib"
 }
 
-apply plugin: 'z-maven'
-zmaven {
+apply plugin: 'tk-maven'
+tkmaven {
     groupId = project.groupId
     artifactId = project.artifactId
     version = project.extVersion
