--- a/build.gradle
+++ b/build.gradle
@@ -11,13 +11,13 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.2'
+        classpath 'com.android.tools.build:gradle:3.5.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
 
-        // Z-Maven 工具
-        classpath 'cn.shper.plugin:z-maven:1.0.1'
+        // TK-Maven 工具
+        classpath 'cn.shper.plugin:tk-maven:1.0.1'
     }
 }
 
