--- a/plugin_core/build.gradle
+++ b/plugin_core/build.gradle
@@ -9,7 +9,7 @@ dependencies {
     implementation gradleApi()
     implementation localGroovy()
 
-    implementation 'com.android.tools.build:gradle:3.5.2'
+    implementation 'com.android.tools.build:gradle:3.5.3'
     implementation 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
 }
 
@@ -19,8 +19,8 @@ ext {
     artifactId = "core"
 }
 
-apply plugin: 'z-maven'
-zmaven {
+apply plugin: 'tk-maven'
+tkmaven {
     groupId = project.groupId
     artifactId = project.artifactId
     version = project.extVersion
@@ -44,10 +44,10 @@ zmaven {
     bintray {
         repo = "maven"
         userOrg = "shper"
-        name = "Z-Plugin-Core"
-        desc = 'Shper Z Plugin Core for Gradle'
+        name = "TK-Plugin-Core"
+        desc = 'Shper TK Plugin Core for Gradle'
         websiteUrl = "https://www.shper.cn"
-        vcsUrl = "https://github.com/shper/ZMavenPlugin"
+        vcsUrl = "https://github.com/shper/TKMavenPlugin"
     }
 
 }
