ADD Support to read the ~/.gradle/gradle.properties file

--- a/demo_app_lib/build.gradle
+++ b/demo_app_lib/build.gradle
@@ -64,4 +64,16 @@ tkmaven {
         javadocJar = false
     }
 
+    bintray {
+        repo = "maven"
+        userOrg = "shper"
+        name = "demo"
+        desc = 'The demo lib for Gradle'
+        websiteUrl = "https://www.shper.cn"
+        vcsUrl = "https://www.shper.cn"
+
+        sourcesJar = true
+        javadocJar = true
+    }
+
 }
