--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,11 @@ buildscript {
     ext.kotlin_version = '1.3.72'
 
     repositories {
+        maven { url 'https://maven.aliyun.com/repository/public/' }
         google()
         jcenter()
         maven{ url 'https://dl.bintray.com/shper/maven' }
-//        maven{ url './repo/' }
+        maven{ url './repo/' }
     }
 
     dependencies {
@@ -18,6 +19,7 @@ buildscript {
 
         // TK-Maven 工具
         classpath 'cn.shper.plugin:tk-maven:1.1.0'
+//        classpath 'cn.shper.plugin:tk-maven:1.2.0-SNAPSHOT'
     }
 
     configurations.all {
@@ -28,6 +30,7 @@ buildscript {
 
 allprojects {
     repositories {
+        maven { url 'https://maven.aliyun.com/repository/public/' }
         google()
         jcenter()
 //        maven{ url 'https://dl.bintray.com/shper/maven' }
