--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -30,7 +30,7 @@ tkmaven {
     version = project.extVersion
 
     repository {
-        url = "./../repo"
+        url = "./../.repo"
         auth = false
 
         sourcesJar = false
@@ -38,7 +38,7 @@ tkmaven {
     }
 
     snapshotRepository {
-        url = './../repo'
+        url = "./../.repo-snapshot"
         auth = false
 
         sourcesJar = true
