--- a/plugin_core/build.gradle
+++ b/plugin_core/build.gradle
@@ -26,7 +26,7 @@ tkmaven {
     version = project.extVersion
 
     repository {
-        url = "./../repo"
+        url = "./../.repo"
         auth = false
 
         sourcesJar = true
@@ -34,7 +34,7 @@ tkmaven {
     }
 
     snapshotRepository {
-        url = './../repo'
+        url = "./../.repo-snapshot"
         auth = false
 
         sourcesJar = true
