--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,7 @@ buildscript {
         // in the individual module build.gradle files
 
         // TK-Maven 工具
-//        classpath 'cn.shper.plugin:tk-maven:1.1.0'
-        classpath 'cn.shper.plugin:tk-maven:1.2.0-SNAPSHOT'
+        classpath 'cn.shper.plugin:tk-maven:1.2.0'
     }
 
     configurations.all {
