--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -2,57 +2,44 @@ apply plugin: 'groovy'
 apply from: 'compat.gradle'
 
 repositories {
-    mavenLocal()
-    jcenter()
+    google()
+    mavenCentral()
 }
 
 dependencies {
     implementation gradleApi()
     implementation localGroovy()
 
-    implementation 'com.android.tools.build:gradle:4.0.0'
-    implementation 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
+    implementation 'com.android.tools.build:gradle:4.2.0'
 
-    implementation 'cn.shper.plugin:core:1.0.1'
+    implementation 'cn.shper.plugin:core:2.0.0'
 }
 
 ext {
-    extVersion = "1.5.0"
+    extVersion = "2.0.0"
     groupId = "cn.shper.plugin"
     artifactId = "tk-maven"
 }
 
-//apply from: 'uploadArchives.gradle'
-apply plugin: 'tk-maven'
-tkmaven {
-    groupId = project.groupId
-    artifactId = project.artifactId
-    version = project.extVersion
-
-    repository {
-        url = "./../.repo"
-
-        sourcesJar = false
-        javadocJar = false
-    }
-
-    snapshotRepository {
-        url = "./../.repo-snapshot"
-
-        sourcesJar = true
-        javadocJar = true
-    }
-
-    bintray {
-        repo = "maven"
-        userOrg = "shper"
-        name = "TK-Maven"
-        desc = 'Shper TK Maven for Gradle'
-        websiteUrl = "https://www.shper.cn"
-        vcsUrl = "https://github.com/shper/TKMavenPlugin"
-
-        sourcesJar = true
-        javadocJar = true
-    }
-
-}
+apply from: '../local_script/uploadArchives.gradle'
+//apply plugin: 'tk-maven'
+//tkmaven {
+//    groupId = project.groupId
+//    artifactId = project.artifactId
+//    version = project.extVersion
+//
+//    repository {
+//        url = "./../.repo"
+//
+//        sourcesJar = false
+//        javadocJar = false
+//    }
+//
+//    snapshotRepository {
+//        url = "./../.repo-snapshot"
+//
+//        sourcesJar = true
+//        javadocJar = true
+//    }
+//
+//}
