--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.72'
+    ext.kotlin_version = '1.5.31'
 
     repositories {
-        maven { url 'https://maven.aliyun.com/repository/public/' }
         google()
-        jcenter()
-        maven{ url 'https://dl.bintray.com/shper/maven' }
+        mavenCentral()
+        maven { url 'https://maven.aliyun.com/repository/public/' }
         maven{ url './.repo/' }
         maven{ url './.repo-snapshot/' }
     }
@@ -19,7 +18,8 @@ buildscript {
         // in the individual module build.gradle files
 
         // TK-Maven 工具
-        classpath 'cn.shper.plugin:tk-maven:1.5.0'
+//        classpath 'cn.shper.plugin:tk-maven:1.5.0'
+        classpath 'cn.shper.plugin:tk-maven:2.0.0-SNAPSHOT'
     }
 
     configurations.all {
@@ -30,10 +30,9 @@ buildscript {
 
 allprojects {
     repositories {
-        maven { url 'https://maven.aliyun.com/repository/public/' }
         google()
-        jcenter()
-//        maven{ url 'https://dl.bintray.com/shper/maven' }
+        mavenCentral()
+        maven { url 'https://maven.aliyun.com/repository/public/' }
         maven{ url './.repo/' }
         maven{ url './.repo-snapshot/' }
     }
