--- a/local_script/uploadArchives.gradle
+++ b/local_script/uploadArchives.gradle
@@ -5,10 +5,10 @@ uploadArchives {
         mavenDeployer {
             pom.groupId = project.groupId
             pom.artifactId = project.artifactId
-            pom.version = project.extVersion + '-SNAPSHOT' +
-                    ''
-
-            repository(url: uri('./../repo'))
+            pom.version = project.extVersion + '-SNAPSHOT'
+            snapshotRepository(url: uri('./../.repo-snapshot'))
+//            repository(url: uri('./../.repo'))
         }
     }
+
 }
