--- a/demo_app_lib/build.gradle
+++ b/demo_app_lib/build.gradle
@@ -53,27 +53,30 @@ ext {
 
 apply plugin: 'tk-maven'
 tkmaven {
+
+    signing = true
+
     groupId = project.groupId
     artifactId = project.artifactId
     version = project.extVersion
 
-    flavors {
-        flavorA {
-//            groupId = "cn.shper.demo.flavor1"
-//            artifactId = "app_lib-flavor1"
-//            version = "1.0.0-flavor1"
-
-            artifactIdSuffix = "-flavor1"
-            versionSuffix = "-flavor1"
-        }
-        flavorB {
-//            artifactIdSuffix = "-flavor2"
-            versionSuffix = "-flavor2"
-        }
-    }
+//    flavors {
+//        flavor1 {
+////            groupId = "cn.shper.demo.flavor1"
+////            artifactId = "app_lib-flavor1"
+////            version = "1.0.0-flavor1"
+//
+//            artifactIdSuffix = "-flavor1"
+//            versionSuffix = "-flavor1"
+//        }
+//        flavor2 {
+////            artifactIdSuffix = "-flavor2"
+//            versionSuffix = "-flavor2"
+//        }
+//    }
 
     repository {
-        url = "./../.repo"
+        url = "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/"
 
         sourcesJar = false
         javadocJar = true
@@ -82,6 +85,7 @@ tkmaven {
     snapshotRepository {
         url = "./../.repo-snapshot"
 
+        authable = false
         sourcesJar = true
         javadocJar = true
     }
