--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,7 @@ buildscript {
         // in the individual module build.gradle files
 
         // TK-Maven 工具
-//        classpath 'cn.shper.plugin:tk-maven:1.5.0'
-        classpath 'cn.shper.plugin:tk-maven:2.0.0-SNAPSHOT'
+        classpath 'cn.shper.plugin:tk-maven:2.0.0'
     }
 
     configurations.all {
