ADD Kotlin File

--- a/demo_app_lib/build.gradle
+++ b/demo_app_lib/build.gradle
@@ -25,6 +25,10 @@ android {
         }
     }
 
+//    sourceSets.main {
+//            javaSrcs += "src/main/koltin"
+//    }
+
 //    productFlavors {
 //        flavor1 {
 //        }
