--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,6 @@
 include ':demo_app_lib'
 //include ':demo_java_lib'
-include ':gradle_compat', ':plugin_core' , ':plugin'
+
+include ':plugin_core'
+//include ':gradle_compat'
+//include ':plugin'
