MDF 整理工程，删除无用文件

--- a/demo_java_lib/build.gradle
+++ b/demo_java_lib/build.gradle
@@ -13,24 +13,26 @@ ext {
     artifactId = "java_lib"
 }
 
-//apply plugin: 'tk-maven'
-//tkmaven {
-//    groupId = project.groupId
-//    artifactId = project.artifactId
-//    version = project.extVersion
-//
-//    repository {
-//        url = "./../.repo"
-//
-//        sourcesJar = true
-//        javadocJar = true
-//    }
-//
-//    snapshotRepository {
-//        url = "./../.repo-snapshot"
-//
-//        sourcesJar = true
-//        javadocJar = true
-//    }
-//
-//}
+apply plugin: 'tk-maven'
+tkmaven {
+    groupId = project.groupId
+    artifactId = project.artifactId
+    version = project.extVersion
+
+    repository {
+        url = "./../.repo"
+
+        authable = false
+        sourcesJar = true
+        javadocJar = true
+    }
+
+    snapshotRepository {
+        url = "./../.repo-snapshot"
+
+        authable = false
+        sourcesJar = true
+        javadocJar = true
+    }
+
+}
